# belief-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bayes-tree-eng.py  bayes-tree.bat  bayes-tree.sh  bayes_engine.py  bayes_tree_gui.py  install.bat  install.sh  pyproject.toml  report_generator.py  requirements.txt  streamlit_app.py  tutorial.ipynb
bayes_tree/: __init__.py  cli.py  engine.py
doc/: bayes_tree_theory.tex
examples/: J_grave_historical.yaml  ab_test.yaml  agnosticism.yaml  atheism.yaml  empty_grave.yaml  god.yaml  hitler.yaml  jesus_historicity.yaml  jesus_objective.yaml  medical_test.yaml  moses.yaml  napoleon.yaml  shroud.yaml
scripts/: bayes-tree-eng.py  bayes-tree.bat  bayes-tree.sh  bayes_tree_gui.py  install.bat  install.sh  report_generator.py  streamlit_app.py
validation/: generate_report.py  run_validation.py  test_01_point_lr_for.yaml  test_02_point_lr_against.yaml  test_03_point_lr_cancel.yaml  test_04_point_lr_combined.yaml  test_05_point_lr_three.yaml  test_06_prior_low.yaml  test_07_prior_high.yaml  test_08_all_for.yaml  test_09_all_against.yaml  test_10_neutral_only.yaml  test_11_dist_uniform.yaml  test_12_dist_beta.yaml  test_13_deep_nesting.yaml  test_14_many_children.yaml  test_15_wide_range.yaml  test_16_narrow_range.yaml  test_17_warn_type_conflict.yaml  test_18_warn_lr_order.yaml  test_19_warn_lr_zero.yaml  test_20_prior_default.yaml  test_21_prior_zero.yaml  test_21b_prior_one.yaml  test_22_lr_zero_negative.yaml  test_23a_lr_extreme_small.yaml  test_23b_lr_extreme_large.yaml  test_24_lr_identity.yaml  test_28a_accumulation_overflow.yaml  test_28b_accumulation_underflow.yaml  test_29_empty_children.yaml  test_30a_prior_above_one.yaml  test_30b_prior_negative.yaml  test_31_lr_degenerate.yaml  test_32a_partial_lr_min.yaml  test_32b_partial_lr_max.yaml  (+9 more)
(+8 files in other folders)
